--- a/mint-example/mint-example/Strings/Localizable.strings
+++ b/mint-example/mint-example/Strings/Localizable.strings
@@ -13,7 +13,7 @@
 "a_screen_title" = "A ViewController"; // deneme
 
 // Home Screen
-"b_screen_title" = "Register \"Title %s5"; // " canim istedigi icin koydum;
+"b_screen_title" = "B ViewController"; // " canim istedigi icin koydum;
 "b_screen_error_empty_field" = "fields must be at between {min} - {max} characters";
 // "b_screen_title" = "Register \"Title %s5"; // " canim istedigi icin koydum;
 //"b_screen_error_empty_field" = "fields must be at between {min} - {max} characters";
